argocd-1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
    kube-burner: argocd-performance-test
    app: nginx
spec:
  selector:
    kube-burner: argocd-performance-test
    app: nginx
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP  # Change to LoadBalancer or NodePort if external access is needed
